--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "webpack-starter-template",
+  "author": "Pavel Skumenko",
   "scripts": {
     "watch": "webpack --watch",
     "start": "webpack serve --open --env develop",
     "build": "webpack",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "pretty": "prettier --write src"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.23.0",
@@ -13,10 +15,12 @@
     "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "prettier": "2.3.0",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.0",
     "ts-loader": "^9.1.2",
